<resources>
    <string name="app_name">Orange Money</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="Hhome">HOME</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="last_update">Last update:</string>
    <string name="change_refresh_rate">Change refresh rate</string>
    <string name="_60_seconds">60 seconds</string>
    <string name="_5_minutes">5 minutes</string>
    <string name="one_hour">One hour</string>
    <string name="choose_preferred_currency_base">Choose preferred currency base</string>
    <string name="_5_seconds">5 seconds</string>
    <string name="rates_updated_at">Rates updated at:</string>
    <string name="values_in">Values expressed in</string>
    <string name="usd_expressed_in_ron_for_the_last_10_days">USD expressed in RON for the last 10 days</string>
</resources>